--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "request": "^2.88.2",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4"
