hompepage for azura

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spopeerr",
-  "homepage": "http://DanielMitchell444.github.io/Spopeer2",
+  "homepage": "http://azurasanta.github.io/Spopeer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
